--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<h2>Erik Alejandro Ibarra Leos, 1933215.</h2>
 	<section>
 		<h2>Evidencia 2 CSS (Flexbox, Grid)</h2>
-		<button class="button" onclick="window.location.href='https:/'">Clase Flexbox</button>
+		<button class="button" onclick="window.location.href='https://iamalejandro02.github.io/Evidencia2/flexbox.html'">Clase Flexbox</button>
 		<button class="button" onclick="window.location.href='https:'">Diseño página usando flexbox (codepen.io)</button>
 		<button class="button" onclick="window.location.href='https:/'">Clase Grid</button>
 	</section>
