--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<section>
 		<h2>Evidencia 2 CSS (Flexbox, Grid)</h2>
 		<button class="button" onclick="window.location.href='https://iamalejandro02.github.io/Evidencia2/flexbox.html'">Clase Flexbox</button>
-		<button class="button" onclick="window.location.href='https:'">Diseño página usando flexbox (codepen.io)</button>
+		<button class="button" onclick="window.location.href='https://iamalejandro02.github.io/Evidencia2/grid.html'">Diseño página usando flexbox (codepen.io)</button>
 		<button class="button" onclick="window.location.href='https:/'">Clase Grid</button>
 	</section>
 </body>
